GSAP stagger animation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "split-type": "^0.3.4",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "three-msdf-text-utils": "^1.1.7"
   }
 }
